# realworld-app-dioxus-sqlite

./: .env  .gitignore  App_Screenshots.md  Cargo.toml  Dioxus.toml  README.md  README_DATABASE.md  input.css  realworld-app-dioxus.db  tailwind.css
assets/: tailwind.css
migrations/: 20250607194615_init.up.sql  20250711062246_basedata.up.sql  20260130120000_add_per_page_to_users.down.sql  20260130120000_add_per_page_to_users.up.sql  20260131120000_add_theme_mode_to_users.down.sql  20260131120000_add_theme_mode_to_users.up.sql
src/: database.rs  main.rs
src/auth/: api.rs  mod.rs  server.rs
src/components/: article_preview.rs  buttons.rs  items_per_page.rs  mod.rs  prev_next_button.rs  user_icons.rs
src/models/: article.rs  comment.rs  mod.rs  pagination.rs  search.rs  user.rs
src/views/: article.rs  editor.rs  home.rs  login.rs  mod.rs  reset_password.rs  search.rs  settings.rs  signup.rs  user_profile.rs
